file : add file function Rest

--- a/Javascript Function/index.html
+++ b/Javascript Function/index.html
@@ -9,6 +9,9 @@
 
 <body>
    <h1>Belajar javascript function</h1>
+   <button id="yaudah">Tampilkan Teks</button>
+
+   <script type=module src="src/js/app.js"></script>
 </body>
 
 </html>
